samples/_failures_safe/1761166345_1c44d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18bf0341.c: In function ‘main’:
./samples/SAFE/__tmp_18bf0341.c:129:9: error: expected declaration or statement at end of input
  129 |         }
      |         ^
./samples/SAFE/__tmp_18bf0341.c:129:9: error: expected declaration or statement at end of input
